k8s/apps/default/songr/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: songr
spec:
  ports:
    - name: http
      port: 3333
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: songr
